implemented table cell overflow ellipsis in overrides file

--- a/client/src/app/components/sources/sources-table/sources-table.component.html
+++ b/client/src/app/components/sources/sources-table/sources-table.component.html
@@ -111,7 +111,7 @@
           <td nzLeft>
             <cvc-source-tag [source]="source"></cvc-source-tag>
           </td>
-          <td style="overflow: hidden; text-overflow: ellipsis;"
+          <td class="overflow-ellipsis"
             nz-tooltip
             [nzTooltipTitle]="showTooltips ? source.name : ''">
             {{ source.name }}
