--- a/client/src/themes/overrides/card-table.overrides.less
+++ b/client/src/themes/overrides/card-table.overrides.less
@@ -43,6 +43,11 @@ tr.data-row td.ant-table-cell {
   .anticon.attribute-icon {
     color: #595959;
   }
+
+  &.overflow-ellipsis {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 tr.data-row td.align-right {
