--- a/client/src/app/components/variant-groups/variant-groups-table/variant-groups-table.component.html
+++ b/client/src/app/components/variant-groups/variant-groups-table/variant-groups-table.component.html
@@ -36,7 +36,8 @@
           [nzSortDirections]="['descend', 'ascend', null]"
           nz-tooltip
           nzTooltipTitle="Variant Count">
-          <i nz-icon nzType="civic:variant"></i> Count
+          <i nz-icon
+            nzType="civic:variant"></i> Count
         </th>
         <th nzWidth="75px"
           nzRight
@@ -46,7 +47,8 @@
           [nzSortDirections]="['descend', 'ascend', null]"
           nz-tooltip
           nzTooltipTitle="Evidence Count">
-          <i nz-icon nzType="civic:evidence"></i> Count
+          <i nz-icon
+            nzType="civic:evidence"></i> Count
         </th>
       </tr>
       <tr class="filter-row">
@@ -79,20 +81,27 @@
           <td nzLeft>
             <cvc-variant-group-tag [variantgroup]="vg"></cvc-variant-group-tag>
           </td>
-          <td style="overflow: hidden; text-overflow: ellipsis;">
-            <span *ngFor="let variant of vg.variantNames; last as isLast">
-              {{ variant }}{{ isLast ? '' : ', ' }}
-            </span>
+          <td class="overflow-ellipsis"
+            nz-tooltip
+            [nzTooltipTitle]="showTooltips ? variantNames : ''">
+            <ng-template #variantNames>
+              <ng-container *ngFor="let variant of vg.variantNames; last as isLast">
+                {{ variant }}{{ isLast ? '' : ', ' }}
+              </ng-container>
+            </ng-template>
+            <ng-container [ngTemplateOutlet]="variantNames"></ng-container>
           </td>
           <td>
             <span *ngFor="let gene of vg.geneNames; last as isLast">
               {{ gene }}{{ isLast ? '' : ', ' }}
             </span>
           </td>
-          <td nzRight nzAlign="right">
+          <td nzRight
+            nzAlign="right">
             {{ vg.variantCount }}
           </td>
-          <td nzRight nzAlign="right">
+          <td nzRight
+            nzAlign="right">
             {{ vg.evidenceItemCount }}
           </td>
         </tr>
@@ -102,18 +111,22 @@
 </nz-card>
 
 <ng-template #titleTemplate>
-  <i nz-icon nzType="civic:variantgroup"></i>
+  <i nz-icon
+    nzType="civic:variantgroup"></i>
   <ng-container *ngIf="this.cvcTitleTemplate">
     <ng-template [ngTemplateOutlet]="cvcTitleTemplate"></ng-template>
   </ng-container>
   <ng-container *ngIf="this.cvcTitle">
     {{ this.cvcTitle }}
   </ng-container>
-  <span *ngIf="(filteredCount$ | ngrxPush) as filteredCount; else noData" nz-typography nzType="secondary">
+  <span *ngIf="(filteredCount$ | ngrxPush) as filteredCount; else noData"
+    nz-typography
+    nzType="secondary">
     ({{ totalCount | number }} total, showing {{ visibleCount | number }}<span *ngIf="totalCount && filteredCount < totalCount"> of {{ filteredCount | number }} filtered</span>)
   </span>
   <ng-template #noData>
-    <span nz-typography nzType="secondary">
+    <span nz-typography
+      nzType="secondary">
       (0 total)
     </span>
   </ng-template>
