--- a/client/src/app/components/diseases/diseases-table/diseases-table.component.html
+++ b/client/src/app/components/diseases/diseases-table/diseases-table.component.html
@@ -1,65 +1,87 @@
-<nz-card [nzTitle]="titleTemplate">
-  <nz-table #diseasesTable
+<!-- adjust nz-card's cvcAutoHeightCard to equalize padding around this table's container e.g. entity-home's nz-page-header components -->
+<nz-card [nzTitle]="titleTemplate"
+  [nzExtra]="extraTemplate"
+  nzSize="small"
+  cvcAutoHeightCard="35">
+  <!-- adjust nz-table's cvcAutoHeightTable to ensure that table's column header rows are not clipped when table is scrolled to bottom -->
+  <nz-table #virtualTable
     nzSize="small"
-    [nzData]="(diseases$ | ngrxPush)"
-    [nzLoading]="(isLoading$ | ngrxPush)"
+    [cvcAutoHeightTable]="25"
+    [nzVirtualItemSize]="29"
+    [nzData]="diseases$ | ngrxPush"
+    [nzLoading]="isLoading"
+    [nzVirtualForTrackBy]="trackByIndex"
+    [nzScroll]="{ x: '400px', y: '800px' }"
     [nzFrontPagination]="false"
     [nzShowPagination]="false">
     <thead (nzSortOrderChange)="onSortChanged($event)">
-      <tr>
-        <th nzWidth="20%"
+      <tr class="col-header-row">
+        <th nzWidth="300px"
+          nzLeft
           [nzColumnKey]="sortColumns.Name"
           [nzSortFn]="true">
           Name
         </th>
-        <th nzWidth="20%"
+        <th nzWidth="150px"
+          nzLeft
           [nzColumnKey]="sortColumns.Doid"
           [nzSortFn]="true">
           DOID
         </th>
-        <th nzWidth="30%">
+        <th nzWidth="400px">
           Genes
         </th>
-        <th nzWidth="8%"
+        <th nzWidth="75px"
+          nzRight
+          nzAlign="right"
           [nzColumnKey]="sortColumns.GeneCount"
           [nzSortFn]="true"
           [nzSortDirections]="['descend', 'ascend', null]"
           nz-tooltip
           nzTooltipTitle="Gene Count">
-          <i nz-icon nzType="civic:gene"></i>
+          <i nz-icon
+            nzType="civic:gene"></i> Count
         </th>
-        <th nzWidth="8%"
+        <th nzWidth="75px"
+          nzRight
+          nzAlign="right"
           [nzColumnKey]="sortColumns.VariantCount"
           [nzSortFn]="true"
           [nzSortDirections]="['descend', 'ascend', null]"
           nz-tooltip
           nzTooltipTitle="Variant Count">
-          <i nz-icon nzType="civic:variant"></i>
+          <i nz-icon
+            nzType="civic:variant"></i> Count
         </th>
-        <th nzWidth="8%"
+        <th nzWidth="75px"
+          nzRight
+          nzAlign="right"
           [nzColumnKey]="sortColumns.EvidenceItemCount"
           [nzSortFn]="true"
           [nzSortDirections]="['descend', 'ascend', null]"
           nz-tooltip
           nzTooltipTitle="Evidence Count">
-          <i nz-icon nzType="civic:evidence"></i>
+          <i nz-icon
+            nzType="civic:evidence"></i> Count
         </th>
-        <th nzWidth="8%"
+        <th nzWidth="75px"
+          nzRight
           [nzColumnKey]="sortColumns.AssertionCount"
           [nzSortFn]="true"
           [nzSortDirections]="['descend', 'ascend', null]"
           nz-tooltip
           nzTooltipTitle="Assertion Count">
-          <i nz-icon nzType="civic:assertion"></i>
+          <i nz-icon
+            nzType="civic:assertion"></i> Count
         </th>
       </tr>
-      <tr>
-        <th>
+      <tr class="filter-row">
+        <th nzLeft>
           <cvc-clearable-input-filter [(inputModel)]="nameInput"
             placeholderText="Name"
             [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
         </th>
-        <th>
+        <th nzLeft>
           <cvc-clearable-input-filter [(inputModel)]="doidInput"
             placeholderText="DOID"
             [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
@@ -69,77 +91,90 @@
             placeholderText="Gene Name"
             [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
         </th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
+        <th nzRight></th>
+        <th nzRight></th>
+        <th nzRight></th>
+        <th nzRight></th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let d of diseasesTable.data">
-        <td>
-          <cvc-disease-tag [disease]="d"></cvc-disease-tag>
-        </td>
-        <td>
-          <cvc-link-tag *ngIf="d.doid; else noDoid"
-            [href]="d.diseaseUrl"
-            tooltip="View on disease-ontology.org">
-            {{ 'DOID:' + d.doid }}
-          </cvc-link-tag>
+      <ng-template nz-virtual-scroll
+        let-disease
+        let-index="index">
+        <tr class="data-row">
+          <td nzLeft>
+            <cvc-disease-tag [disease]="disease"></cvc-disease-tag>
+          </td>
+          <td nzLeft>
+            <cvc-link-tag *ngIf="disease.doid; else noDoid"
+              [href]="disease.diseaseUrl"
+              tooltip="View on disease-ontology.org">
+              {{ 'DOID:' + disease.doid }}
+            </cvc-link-tag>
 
-          <ng-template #noDoid>
-            --
-          </ng-template>
-        </td>
-        <td>
-          <p nz-typography>
-            <span *ngFor="let gene of d.geneNames; last as isLast">
-                          {{ gene }}{{ isLast ? '' : ', ' }}
-                        </span>
-          </p>
-        </td>
-        <td>
-          {{ d.geneCount }}
-        </td>
-        <td>
-          {{ d.variantCount }}
-        </td>
-        <td>
-          {{ d.evidenceItemCount }}
-        </td>
-        <td>
-          {{ d.assertionCount }}
-        </td>
-      </tr>
-      <!-- Load More button row -->
-      <ng-container *ngrxLet="pageInfo$ as pageInfo">
-        <tr *ngIf="pageInfo.hasNextPage">
-          <td colspan="7">
-            <button *ngIf="pageInfo.hasNextPage"
-              (click)="loadMore(pageInfo.endCursor)"
-              nz-button
-              nzBlock>Load {{this.initialPageSize}} More</button>
+            <ng-template #noDoid>
+              --
+            </ng-template>
+          </td>
+          <td class="overflow-ellipsis"
+            nz-tooltip
+            [nzTooltipTitle]="showTooltips ? geneNames : ''">
+            <ng-template #geneNames>
+              <ng-container *ngFor="let gene of disease.geneNames; last as isLast">
+                {{ gene }}{{ isLast ? '' : ', ' }}
+              </ng-container>
+            </ng-template>
+            <ng-container [ngTemplateOutlet]="geneNames"></ng-container>
+          </td>
+          <td nzRight
+            nzAlign="right">
+            {{ disease.geneCount }}
+          </td>
+          <td nzRight
+            nzAlign="right">
+            {{ disease.variantCount }}
+          </td>
+          <td nzRight
+            nzAlign="right">
+            {{ disease.evidenceItemCount }}
+          </td>
+          <td nzRight
+            nzAlign="right">
+            {{ disease.assertionCount }}
           </td>
         </tr>
-      </ng-container>
+      </ng-template>
     </tbody>
   </nz-table>
 </nz-card>
 
 <ng-template #titleTemplate>
-  <i nz-icon nzType="civic:disease"></i>
+  <i nz-icon
+    nzType="civic:disease"></i>
   <ng-container *ngIf="this.cvcTitleTemplate">
     <ng-template [ngTemplateOutlet]="cvcTitleTemplate"></ng-template>
   </ng-container>
   <ng-container *ngIf="this.cvcTitle">
     {{ this.cvcTitle }}
   </ng-container>
-  <span *ngIf="(filteredCount$ | ngrxPush) as filteredCount; else noData" nz-typography nzType="secondary">
-    ({{totalCount}} total, showing {{visibleCount}}<span *ngIf="totalCount && filteredCount < totalCount"> of {{filteredCount}} filtered</span>)
+  <span *ngIf="(filteredCount$ | ngrxPush) as filteredCount; else noData"
+    nz-typography
+    nzType="secondary">
+    ({{ totalCount | number }} total, showing {{ visibleCount | number }}<span *ngIf="totalCount && filteredCount < totalCount"> of {{ filteredCount | number }} filtered</span>)
   </span>
   <ng-template #noData>
-    <span nz-typography nzType="secondary">
+    <span nz-typography
+      nzType="secondary">
       (0 total)
     </span>
   </ng-template>
+</ng-template>
+
+<ng-template #extraTemplate>
+  <nz-tag nzColor="warning"
+    *ngIf="noMoreRows$ | ngrxPush">
+    <i nz-icon
+      nzType="exclamation-circle"></i>
+    <span>End of results reached</span>
+  </nz-tag>
 </ng-template>
