added icons for clinical-trial, collections

--- a/client/src/app/components/clinical-trials/clinical-trial-popover/clinical-trial-popover.component.html
+++ b/client/src/app/components/clinical-trials/clinical-trial-popover/clinical-trial-popover.component.html
@@ -5,7 +5,7 @@
       [nzExtra]="linkout">
       <ng-template #cardTitle>
         <i nz-icon
-          nzType="audit"></i> {{ t.nctId }}
+          nzType="civic:clinicaltrial"></i> {{ t.nctId }}
       </ng-template>
       <ng-template #linkout>
         <cvc-link-tag [href]="t.url">
