--- a/client/src/app/components/clinical-trials/clinical-trial-tag/clinical-trial-tag.component.html
+++ b/client/src/app/components/clinical-trials/clinical-trial-tag/clinical-trial-tag.component.html
@@ -31,6 +31,6 @@
 
 <ng-template #tagContent>
   <i nz-icon
-    nzType="audit"
+    nzType="civic:clinicaltrial"
     class="clinical-trial-tag-icon"></i> {{ clinicalTrial.nctId }}
 </ng-template>
