--- a/client/src/app/components/clinical-trials/clinical-trials-table/clinical-trials-table.component.html
+++ b/client/src/app/components/clinical-trials/clinical-trials-table/clinical-trials-table.component.html
@@ -93,7 +93,7 @@
 </nz-card>
 
 <ng-template #titleTemplate>
-  <i nz-icon nzType="audit"></i>
+  <i nz-icon nzType="civic:clinicaltrial"></i>
   <ng-container *ngIf="this.cvcTitleTemplate">
     <ng-template [ngTemplateOutlet]="cvcTitleTemplate"></ng-template>
   </ng-container>
