--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -91,7 +91,7 @@
         nzSelected
         nzMatchRouter>
         <i nz-icon
-          nzType="audit"></i>
+          nzType="civic-clinicaltrial"></i>
         <span> <a routerLink="/clinical-trials">Clinical Trials</a> </span>
       </li>
 
@@ -175,7 +175,7 @@
             nzSelected
             nzMatchRouter>
             <i nz-icon
-              nzType="file-add"></i>
+              nzType="civic-collection"></i>
             <span>
               <a routerLink="/curation/queues">Queues</a>
             </span>
