--- a/client/src/app/views/clinical-trials/clinical-trials-detail/clinical-trials-detail.component.html
+++ b/client/src/app/views/clinical-trials/clinical-trials-detail/clinical-trials-detail.component.html
@@ -3,7 +3,7 @@
   <nz-page-header class="site-page-header">
     <nz-page-header-title>
       <i nz-icon
-        nzType="audit"></i> {{ t.name }}
+        nzType="civic:clinicaltrial"></i> {{ t.name }}
     </nz-page-header-title>
     <nz-page-header-extra>
       <cvc-link-tag [href]="t.url"
