--- a/client/src/app/views/clinical-trials/clinical-trials-home/clinical-trials-home.page.html
+++ b/client/src/app/views/clinical-trials/clinical-trials-home/clinical-trials-home.page.html
@@ -7,7 +7,7 @@
       <nz-col nzFlex="64px"
         class="header-icon">
         <i nz-icon
-          nzType="audit"></i>
+          nzType="civic:clinicaltrial"></i>
       </nz-col>
       <nz-col nzFlex="600px"
         class="header-description">
