consistently disable nested tag popovers

--- a/client/src/app/components/comments/comment-popover/comment-popover.component.html
+++ b/client/src/app/components/comments/comment-popover/comment-popover.component.html
@@ -10,8 +10,8 @@
           <cvc-assertion-tag *ngSwitchCase="'Assertion'" [enablePopover]="false" [assertion]="c.commentable"></cvc-assertion-tag>
           <cvc-evidence-tag *ngSwitchCase="'EvidenceItem'" [enablePopover]="false" [evidence]="c.commentable"></cvc-evidence-tag>
           <cvc-variant-tag *ngSwitchCase="'Variant'" [enablePopover]="false" [variant]="c.commentable"></cvc-variant-tag>
-          <cvc-revision-tag *ngSwitchCase="'Revision'" [revision]="c.commentable"></cvc-revision-tag>
-          <cvc-source-tag *ngSwitchCase="'Source'" mode="concise" [source]="$any(c.commentable)"></cvc-source-tag>
+          <cvc-revision-tag *ngSwitchCase="'Revision'" [enablePopover]="false" [revision]="c.commentable"></cvc-revision-tag>
+          <cvc-source-tag *ngSwitchCase="'Source'" mode="concise" [enablePopover]="false" [source]="$any(c.commentable)"></cvc-source-tag>
           <span *ngSwitchDefault>{{ c.commentable.name }}</span>
         </ng-container>
         {{ c.createdAt | timeago }}
