--- a/client/src/app/components/organizations/organization-tag/organization-tag.component.html
+++ b/client/src/app/components/organizations/organization-tag/organization-tag.component.html
@@ -5,7 +5,7 @@
 </ng-container>
 
 <ng-template #tag>
-  <nz-tag
+  <nz-tag *ngIf="enablePopover; else noPopover"
     nz-popover
     [nzPopoverContent]="orgPopover">
     <ng-template [ngTemplateOutlet]="tagContent"></ng-template>
